:hammer: modif requetes.sql

--- a/composer.json
+++ b/composer.json
@@ -99,7 +99,7 @@
             "php bin/console d:d:d --force --if-exists",
             "php bin/console d:d:c",
             "php bin/console d:s:u --force --complete",
-            "php bin/console d:f:l"
+            "php bin/console d:f:l --no-interaction"
         ]
     },
     "conflict": {
